--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 </head>
 <body>
     <main>
-        <div>
-            <h1>Reliable, efficient delivery <br><strong>Powered by Technology</strong></h1>
-            <p>
+        <div class="header">
+            <p>Reliable, efficient delivery<br><strong>Powered by Technology</strong></p>
+            <p class="paragraph">
                 Our Artificial Intelligence powered tools use millions of project data points to ensure
                 that your project is successful
             </p>
         </div>
-        <div>
+        <div class="supervisor-box">
             <h2>Supervisor</h2>
             <p>Monitors activity to identify project roadblocks</p>
             <img src="images/icon-supervisor.svg" alt="supervisor-image">
         </div>
-        <div>
+        <div class="team-builder-box">
             <h2>Team Builder</h2>
             <p>Scans our talent network to create the optimal team for your project</p>
             <img src="images/icon-team-builder.svg" alt="team-builder-image">
         </div>
-        <div>
+        <div class="karma-box">
             <h2>Karma</h2>
             <p>Regularly evaluates our talent to ensure quality</p>
             <img src="images/icon-karma.svg" alt="karma-image">
         </div>
-        <div>
+        <div class="calculator-box">
             <h2>Calculator</h2>
             <p>Uses data from past projects to provide better delivery estimates</p>
             <img src="images/icon-calculator.svg" alt="calculator-image">
